--- a/index.html
+++ b/index.html
@@ -1,52 +1,176 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Bai Luxe Candle Co.</title>
+
 <style>
-:root{--bg:#0d0e10;--ink:#f6f2e9;--mut:rgba(246,242,233,.72);--line:rgba(246,242,233,.14);--gold:#c8a24a;--max:1120px}
-*{box-sizing:border-box}body{margin:0;background:var(--bg);color:var(--ink);font:14px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Arial}
-a{color:inherit;text-decoration:none}img{display:block;max-width:100%}
+:root{
+  --bg:#fbfaf8;
+  --paper:#ffffff;
+  --ink:#141414;
+  --mut:rgba(20,20,20,.68);
+  --line:rgba(20,20,20,.12);
+  --shadow:0 18px 50px rgba(0,0,0,.06);
+  --max:1120px;
+  --r:18px;
+}
+
+*{box-sizing:border-box}
+html,body{margin:0;padding:0}
+body{
+  background:var(--bg);
+  color:var(--ink);
+  font:14px/1.55 system-ui,-apple-system,Segoe UI,Roboto,Arial;
+}
+a{color:inherit;text-decoration:none}
+img{display:block;max-width:100%}
+
 .wrap{max-width:var(--max);margin:0 auto;padding:0 18px}
-nav{position:sticky;top:0;background:rgba(13,14,16,.72);backdrop-filter:blur(10px);border-bottom:1px solid var(--line);z-index:50}
-.bar{display:flex;align-items:center;justify-content:space-between;padding:12px 0;gap:12px}
-.brand{display:flex;align-items:center;gap:10px;min-width:180px}
-.brand img{width:34px;height:34px;border-radius:999px;border:1px solid var(--line);object-fit:cover}
-.brand b{letter-spacing:.18em;text-transform:uppercase;font-size:12px}
+
+nav{
+  position:sticky;
+  top:0;
+  z-index:50;
+  background:rgba(251,250,248,.90);
+  backdrop-filter:blur(10px);
+  border-bottom:1px solid var(--line);
+}
+.bar{display:flex;align-items:center;justify-content:space-between;gap:12px;padding:12px 0}
+
+.brand{display:flex;align-items:center;gap:10px;min-width:220px}
+.brand img{
+  width:36px;height:36px;
+  border-radius:999px;
+  border:1px solid var(--line);
+  background:#fff;
+  padding:5px;
+  object-fit:contain;
+}
+.brand b{
+  letter-spacing:.18em;
+  text-transform:uppercase;
+  font-size:12px;
+}
+
 .links{display:flex;gap:10px;flex-wrap:wrap;justify-content:center}
-.links a{padding:8px 10px;border-radius:999px;color:var(--mut)} .links a:hover{background:rgba(246,242,233,.06);color:var(--ink)}
-.cta{display:flex;gap:10px}
-.btn{padding:10px 14px;border-radius:999px;border:1px solid var(--line);color:var(--ink)}
-.btn.gold{background:var(--gold);border-color:var(--gold);color:#151515;font-weight:600}
-.hero{padding:42px 0 18px}
+.links a{
+  padding:8px 10px;
+  border-radius:999px;
+  color:var(--mut);
+}
+.links a:hover{background:rgba(20,20,20,.05);color:var(--ink)}
+
+.cta{display:flex;gap:10px;align-items:center}
+.btn{
+  padding:10px 14px;
+  border-radius:999px;
+  border:1px solid var(--line);
+  background:#fff;
+  font-size:13px;
+}
+.btn.primary{
+  background:var(--ink);
+  color:#fff;
+  border-color:rgba(20,20,20,.85);
+}
+
+.section{padding:42px 0}
 .grid{display:grid;gap:16px}
+
 .heroGrid{grid-template-columns:1.2fr .8fr;align-items:stretch}
-@media(max-width:900px){.heroGrid{grid-template-columns:1fr}.links{display:none}}
-.card{border:1px solid var(--line);border-radius:18px;overflow:hidden}
-.heroImg img{width:100%;height:100%;object-fit:cover;aspect-ratio:16/10}
-.side{padding:18px;background:rgba(246,242,233,.04)}
-.k{letter-spacing:.22em;text-transform:uppercase;font-size:11px;color:var(--mut)}
-h1{margin:8px 0 0;font-weight:560;letter-spacing:-.02em;line-height:1.05;font-size:clamp(26px,3vw,40px)}
-p{margin:10px 0 0;color:var(--mut);max-width:60ch}
+@media(max-width:900px){
+  .heroGrid{grid-template-columns:1fr}
+  .links{display:none}
+  .brand{min-width:auto}
+}
+
+.card{
+  background:var(--paper);
+  border:1px solid var(--line);
+  border-radius:var(--r);
+  overflow:hidden;
+  box-shadow:var(--shadow);
+}
+
+.heroImg img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  aspect-ratio:16/10;
+}
+
+.side{padding:18px}
+.k{
+  letter-spacing:.22em;
+  text-transform:uppercase;
+  font-size:11px;
+  color:var(--mut);
+}
+h1{
+  margin:10px 0 0;
+  font-weight:560;
+  letter-spacing:-.02em;
+  line-height:1.06;
+  font-size:clamp(26px,3vw,40px);
+}
+p{margin:10px 0 0;color:var(--mut);max-width:62ch}
+
 .row{display:flex;gap:10px;flex-wrap:wrap;margin-top:14px}
-.pause{padding:18px 0 18px;border-top:1px solid var(--line);border-bottom:1px solid var(--line);margin:18px 0 0}
-.pause .wrap{display:flex;justify-content:space-between;gap:12px;flex-wrap:wrap}
-.pause span{color:var(--mut);letter-spacing:.14em;text-transform:uppercase;font-size:11px}
-.section{padding:36px 0}
-.head{display:flex;justify-content:space-between;align-items:flex-end;gap:12px;margin-bottom:14px}
-.head h2{margin:0;font-weight:560;font-size:18px;letter-spacing:.04em;text-transform:uppercase}
+
+.pause{
+  margin-top:16px;
+  padding:12px 14px;
+  border-radius:14px;
+  border:1px solid var(--line);
+  background:rgba(20,20,20,.02);
+  display:flex;
+  gap:14px;
+  flex-wrap:wrap;
+}
+.pause span{
+  color:var(--mut);
+  letter-spacing:.14em;
+  text-transform:uppercase;
+  font-size:11px;
+}
+
+.head{
+  display:flex;
+  justify-content:space-between;
+  align-items:flex-end;
+  gap:12px;
+  margin-bottom:14px;
+}
+.head h2{
+  margin:0;
+  font-weight:560;
+  font-size:12px;
+  letter-spacing:.20em;
+  text-transform:uppercase;
+}
 .head small{color:var(--mut)}
+
 .products{grid-template-columns:repeat(3,1fr)}
 @media(max-width:900px){.products{grid-template-columns:1fr}}
+
 .prod img{width:100%;aspect-ratio:4/5;object-fit:cover}
 .prod .b{padding:14px}
 .prod .top{display:flex;justify-content:space-between;gap:10px}
-.prod .name{font-weight:600} .prod .price{color:var(--mut)}
+.prod .name{font-weight:600}
+.prod .price{color:var(--mut)}
 .prod .note{margin:8px 0 0;color:var(--mut)}
+
 .split{grid-template-columns:1fr 1fr;align-items:stretch}
 @media(max-width:900px){.split{grid-template-columns:1fr}}
-.split .copy{padding:18px;background:rgba(246,242,233,.04);display:flex;flex-direction:column;justify-content:center}
-footer{padding:28px 0;border-top:1px solid var(--line);color:var(--mut)}
+.copy{padding:18px;display:flex;flex-direction:column;justify-content:center}
+
+footer{
+  padding:28px 0;
+  border-top:1px solid var(--line);
+  background:rgba(255,255,255,.45);
+}
 </style>
 </head>
 
@@ -57,33 +181,40 @@ footer{padding:28px 0;border-top:1px solid var(--line);color:var(--mut)}
       <img src="606ccae6-6c10-4beb-8bee-3e73232d2aa9.png" alt="Bai Luxe logo">
       <b>Bai Luxe Candle Co.</b>
     </div>
+
     <div class="links">
-      <a href="#shop">Shop</a><a href="#about">About</a><a href="#contact">Contact</a>
+      <a href="#shop">Shop</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
     </div>
+
     <div class="cta">
       <a class="btn" href="https://www.bailuxeonlineshop.com" target="_blank" rel="noopener">Current</a>
-      <a class="btn gold" href="#" target="_blank" rel="noopener">Shop Now</a>
+      <a class="btn primary" href="#" target="_blank" rel="noopener">Shop Now</a>
     </div>
   </div>
 </nav>
 
-<section class="hero">
+<section class="section">
   <div class="wrap grid heroGrid">
     <div class="card heroImg">
       <img src="ChatGPT%20Image%20Jul%2021,%202025,%2003_21_45%20PM.png" alt="Featured candle">
     </div>
+
     <div class="card side">
       <div class="k">Hand-poured, small batch</div>
-      <h1>Quiet, bold scents, made to elevate your space.</h1>
-      <p>Clean-burning para-soy blend candles, designed for mood and performance. Curated, not crowded.</p>
+      <h1>Candles that elevate your space, quietly.</h1>
+      <p>Clean-burning candles, curated scents, simple presentation. No clutter, just product.</p>
+
       <div class="row">
-        <a class="btn gold" href="#shop">View Featured</a>
+        <a class="btn primary" href="#shop">View Featured</a>
         <a class="btn" href="#about">About</a>
       </div>
-      <div class="pause" style="margin-top:16px">
-        <div class="wrap">
-          <span>Clean burn</span><span>Strong throw</span><span>Giftable</span>
-        </div>
+
+      <div class="pause">
+        <span>Clean burn</span>
+        <span>Strong throw</span>
+        <span>Giftable</span>
       </div>
     </div>
   </div>
@@ -91,7 +222,11 @@ footer{padding:28px 0;border-top:1px solid var(--line);color:var(--mut)}
 
 <section id="shop" class="section">
   <div class="wrap">
-    <div class="head"><h2>Featured</h2><small>3 picks, big images, minimal text</small></div>
+    <div class="head">
+      <h2>Featured</h2>
+      <small>Keep it curated, not crowded</small>
+    </div>
+
     <div class="grid products">
       <article class="card prod">
         <img src="ChatGPT%20Image%20Jul%2014,%202025,%2010_04_12%20AM.png" alt="Royal Cotton candle">
@@ -100,6 +235,7 @@ footer{padding:28px 0;border-top:1px solid var(--line);color:var(--mut)}
           <div class="note">Fresh linen, soft musk, clean finish.</div>
         </div>
       </article>
+
       <article class="card prod">
         <img src="Flaming_Rose_Edited.jpg" alt="Flaming Rose candle">
         <div class="b">
@@ -107,6 +243,7 @@ footer{padding:28px 0;border-top:1px solid var(--line);color:var(--mut)}
           <div class="note">Velvet rose, warm glow, romantic edge.</div>
         </div>
       </article>
+
       <article class="card prod">
         <img src="ChatGPT%20Image%20Jul%2011,%202025,%2012_02_53%20PM.png" alt="Aqua Noir Man candle">
         <div class="b">
@@ -121,14 +258,15 @@ footer{padding:28px 0;border-top:1px solid var(--line);color:var(--mut)}
 <section id="about" class="section">
   <div class="wrap grid split">
     <div class="card heroImg">
-      <img src="ChatGPT%20Image%20Jul%2014,%202025,%2010_45_30%20AM.png" alt="Alpha Male candle">
+      <img src="ChatGPT%20Image%20Jul%2014,%202025,%2010_45_30%20AM.png" alt="Candle image">
     </div>
+
     <div class="card copy">
       <div class="k">About</div>
-      <h1 style="font-size:28px;margin-top:8px">Made with intention, not noise.</h1>
-      <p>Bai Luxe Candle Co. focuses on clean visuals, bold scent profiles, and a premium burn experience, without clutter or over-explaining.</p>
+      <h1 style="font-size:28px;margin-top:10px">Made with intention, not noise.</h1>
+      <p>Bai Luxe Candle Co. focuses on clean visuals, bold scent profiles, and a premium burn experience, with a simple site that lets the product lead.</p>
       <div class="row">
-        <a class="btn gold" href="#">Shop Now</a>
+        <a class="btn primary" href="#" target="_blank" rel="noopener">Shop Now</a>
         <a class="btn" href="#contact">Contact</a>
       </div>
     </div>
@@ -138,11 +276,13 @@ footer{padding:28px 0;border-top:1px solid var(--line);color:var(--mut)}
 <footer id="contact">
   <div class="wrap">
     <div class="k">Contact</div>
-    <p style="margin-top:8px">Email: yourname@yourdomain.com · Instagram: @bailuxecandleco</p>
+    <p style="margin-top:8px">Email, yourname@yourdomain.com, Instagram, @bailuxecandleco</p>
     <p>© <span id="y"></span> Bai Luxe Candle Co.</p>
   </div>
 </footer>
 
-<script>document.getElementById("y").textContent=new Date().getFullYear();</script>
+<script>
+document.getElementById("y").textContent = new Date().getFullYear();
+</script>
 </body>
 </html>
